--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: 	mclust02
-Version: 	2.1-14
-Date:		2006-09-14
+Version: 	2.1-15
+Date:		2006-09-15
 Author: 	C. Fraley and A.E. Raftery, Dept. of Statistics, 
 		University of Washington.
 		R port by Ron Wehrens.
-Title: 		Model-based cluster analysis
+Title: 		Model-based cluster analysis (older version)
 Description: 	Model-based cluster analysis: the 2002 version of MCLUST
 Depends:	R (>= 2.2.0), stats, utils
 License: 	See http://www.stat.washington.edu/mclust/license.txt
