--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: 	mclust02
-Version: 	2.1-17
-Date:		2007-11-20
+Version: 	2.1-18
+Date:		2009-03-06
 Author: 	C. Fraley and A.E. Raftery, Dept. of Statistics, 
 		University of Washington.
 		R port by Ron Wehrens.
@@ -10,4 +10,4 @@ Depends:	R (>= 2.2.0), stats, utils
 License:        file LICENSE
 Maintainer: 	Chris Fraley <fraley@u.washington.edu>
 URL:		http://www.stat.washington.edu/mclust
-Packaged: Wed Nov 21 09:22:46 2007; hornik
+Packaged: Fri Mar  6 11:36:59 2009; fraley
